refactor github stuff out from the main class code review fixes: use DI in chatgpt service, remove initialization from the request handler

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   review-gpt:
-    image: codehouseou/review-gpt:latest
+    image: codehouseou/review-gpt:1.0.11
     environment:
       - GH_AUTH=${GH_AUTH}
       - ENDPOINT=${ENDPOINT}
